fix(closeButton): center align

--- a/chrome_extension/app.css
+++ b/chrome_extension/app.css
@@ -55,6 +55,7 @@
   font-size: 16px;
   color: white;
   cursor: pointer;
+  text-align: center;
 }
 
 #revwr #close-button:hover {
